# mdns-sd

./: Cargo.toml
examples/: query.rs  register.rs
src/: dns_parser.rs  lib.rs  service_daemon.rs
tests/: mdns_test.rs
