[package]
name = "mdns-sd"
version = "0.7.3"
authors = ["keepsimple <keepsimple@gmail.com>"]
edition = "2021"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/keepsimple1/mdns-sd"
documentation = "https://docs.rs/mdns-sd"
keywords = ["mdns", "discovery", "service-discovery", "zeroconf", "dns-sd"]
categories = ["network-programming"]
description = "mDNS Service Discovery library with no async runtime dependency"

[features]
logging = ["log"]
default = ["logging"]

[dependencies]
if-addrs = "0.7"                                       # get local IP addresses
log = { version = "0.4.14", optional = true }          # logging
governor = { version = "0.6", default-features = false, features = ["std"] }
polling = "2.1"                                        # select/poll sockets
socket2 = { version = "0.4", features = ["all"] }      # socket APIs
rand = { version = "0.8", default_features = false, features = ["small_rng", "getrandom"] }

[dev-dependencies]
fastrand = "1.8"
env_logger = "0.9"
